singouins-monitoring/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  namespace: singouins-monitoring
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      name: grafana # For promtail logging
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9104"
        prometheus.io/path: "/metrics"
      labels:
        name: grafana # For promtail logging
    spec:

      containers:
        - name: grafana
          image: grafana/grafana:9.5.12
          resources:
            limits:
              memory: 128Mi
              cpu: 50m
            requests:
              memory: 32Mi
              cpu: 10m
---
apiVersion: v1
kind: Service

metadata:
  namespace: singouins-monitoring
  name: grafana-svc
spec:
  selector:
    name: grafana # For promtail logging
  ports:
  - name: http-grafana
    protocol: TCP
    port: 3000
    targetPort: 3000
