singouins-monitoring/grafana/NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-to-grafana
  namespace: singouins-monitoring
spec:
  podSelector:
    matchLabels:
      name: grafana
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: singouins-networking
  egress:
  - to:
    - namespaceSelector:
            matchLabels:
              name: singouins-monitoring
